# research_plus

./: .gitignore  AUDIT_REPORT.md  CLAUDE.md  L15_consolidation.md  L2_generation.md  L3_PROMPT_ANALYSIS_MEMO.md  L3_final_synthesis.md  L3a_Selection_Review_Memo.md  PIPELINE_IMPROVEMENTS_SPEC.md  README (1).md  README.md  TODO.md  add_contrarian_l2.py  generate_pdf.py  manufacturer.md  original_3a.rtf  original_3b.rtf  other_archetypes.md  pyproject.toml  requirements.txt  rerun_failed.py  retailer.md  run_batch.sh  run_l3_refresh.sh  saas.md
.agent/: config.md  index.md  session-log.md
.agent/decisions/: decisions-full.md  decisions-key.md  open-questions.md
deep_research/: __init__.py  __main__.py  config.py  context_manager.py  models.py  orchestrator.py  pdf_generator.py  prompt_builder.py  quality_checker.py  report_generator.py  research_runner.py
docs/: CONTEXT.md  SITUATION_ASSESSMENT_OVERVIEW.md  orchestration_spec.md
docs/pipeline_design/: l05_agent_design.md  l0_company_profile.md
examples/camellia/: Camellia - Anatomy of an Opaque Holdco.md  Camellia - Competitive Intelligence & Playbook.md  Camellia - Cost Centre Tension Points Addendum.md  Camellia - ESG Inflection Point.md  Camellia - Five Moves to Unlock Value.md  Camellia - Geopolitical Risk Assessment.md  Camellia - Hidden Value in 48k Hectares.md  l1_prompts_camellia_v2.md  (+4 more)
prompts/: l0_company_profile.md  l2_generation.md
prompts_archive/: l05_agent_design.md  l0_company_profile.md  l15_consolidation.md  l2_generation.md  l3_final_synthesis.md
tests/: test_parsing.py
(+397 files in other folders)
